k8s/test-ingress/Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers:
  - name: nginx-cont 
    image: nginx 
    ports:
    - containerPort: 80
      name: http 
      protocol: TCP
