k8s/test-ingress/Service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: test-svc
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
