k8s/test-ingress/IngressRule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: ingress-rule-test
   annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-class
  rules:
  - http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: test-svc
            port:
              number: 80
